--- a/didatico-front/src/app/home/home.component.html
+++ b/didatico-front/src/app/home/home.component.html
@@ -1,9 +1,24 @@
-<form [formGroup]="form">
+<div class="container">
+  <form [formGroup]="form">
+    <div class="input-container">
 
-    <input type="text" size="40" class="search" placeholder="Buscar Wikipedia..." class="form-control"
-        id="busca" formControlName="busca" [(ngModel)]="busca">
+      <input type="text" size="40" class="search" class="form-control" id="busca" formControlName="busca" required=""
+        [(ngModel)]="busca">
+      <label>Busca</label>
+      <button class="clear" (click)="clear()">Limpar</button>
+
+    </div>
+
   </form>
-
-  <tr class="resultados" *ngFor="let resultado of resultados">
-    <td>{{resultado}}</td>
-     </tr>
+  <div class="resultado">
+    <table class="table-fill">
+      <tr class="resultados" *ngFor="let resultado of resultados">
+        <a href='https://pt.wikipedia.org/wiki/?curid={{resultado.pageid}}' target="_blank">
+          <td class="text-left">
+            {{resultado.title}}
+          </td>
+        </a>
+      </tr>
+    </table>
+  </div>
+</div>
