--- a/didatico-front/src/app/home/home.component.css
+++ b/didatico-front/src/app/home/home.component.css
@@ -22,7 +22,7 @@ a:hover{
   }
   tr {
     border-top: 1px solid #C1C3D1;
-    border-bottom-: 1px solid #C1C3D1;
+    border-bottom: 1px solid #C1C3D1;
     color:#666B85;
     font-size:16px;
     font-weight:normal;
@@ -84,7 +84,6 @@ a:hover{
 	left:0px;
 	font-size:16px;
 	color:#e74c3c;	
-    pointer-event:none;
 	transition: all 0.5s ease-in-out;
 }
 .input-container input{ 
